ManyToMany and OneToOne support

--- a/lycan/package.json
+++ b/lycan/package.json
@@ -8,5 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joshua Bracks",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/Joshabracks/Lycan-DB"
+  }
 }
